# connectia

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  TERMS.md
backend/: Cargo.toml  Makefile.toml
backend/src/: args.rs  auth.rs  handlers.rs  main.rs  response_bodies.rs  states.rs
backend/src/db/: migrator.rs  mod.rs  user.rs  users.rs
frontend/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js
frontend/html/: index.html
frontend/src/: app.rs  main.rs  responses.rs
frontend/src/app/: forms.rs  mod.rs  pages.rs  queries.rs  state.rs  utils.rs
frontend/src/app/components/: mod.rs  title.rs
frontend/src/app/pages/: admin.rs  error.rs  landing.rs  login.rs  logout.rs  mod.rs
frontend/src/net/: bodies.rs  mod.rs  responses.rs
static/frontend/: index.html
static/styles/: app.css
