[package]
name = "connectia-backend"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-reverse-proxy = "0.8.0"
clap = { version = "4.5.34", features = ["derive"] }
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "tokio", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
