[package]
name = "connectia-frontend"
version = "0.0.0"
edition = "2024"

[dependencies]
gloo-net = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["HtmlInputElement", "FormData", "HtmlFormElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
yew-router = "0.18.0"
yewdux = "0.11.0"

